syntax = "proto3";

                 package userAddress;
service UserAddressService {
 rpc createUserAddress (UserAddressCreateInput) returns (UserAddress) {}
rpc userAddresses (findManyParams) returns (stream UserAddress) {}
rpc userAddress (UserAddressWhereUniqueInput) returns (UserAddress) {}
rpc updateUserAddress (UserAddressUpdateInput) returns (UserAddress) {}
rpc deleteUserAddress (UserAddressWhereUniqueInput) returns (UserAddress) {} 
 }
message UserAddressCreateInput {
string createdAt = 1;
string description = 2;
string id = 3;
int32 lat = 4;
int32 lng = 5;
string name = 6;
string updatedAt = 7;
};
message UserAddress {
string createdAt = 1;
string description = 2;
string id = 3;
int32 lat = 4;
int32 lng = 5;
string name = 6;
string updatedAt = 7;
};
message UserAddressWhereUniqueInput {
string createdAt = 1;
string description = 2;
string id = 3;
int32 lat = 4;
int32 lng = 5;
string name = 6;
string updatedAt = 7;
};
message UserAddressUpdateInput {
string createdAt = 1;
string description = 2;
string id = 3;
int32 lat = 4;
int32 lng = 5;
string name = 6;
string updatedAt = 7;
};
message findManyParams {

};